tests/paczka1/fuzzy1/40362818.err
Error in line 1: pTm A451 3,7
Error in line 6: p0G7JdySN A716 45,6
Error in line 10: HC2 S505 60,4
Error in line 26: S505 S391 4,6
Error in line 32: 8gLLkb4y7J S391 16,8
Error in line 29: HC2 A451 25,9
